# acestream-m3u-proxy

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/acestream_proxy/: __init__.py  cache.py  config.py  main.py  models.py  router.py  service.py
tests/: test_imports.py  test_router.py  test_service.py
